Fix eslint errors

--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -20,11 +20,10 @@
 			"error",
 			{
 				"singleQuote": false,
-				"useTabs": true,
+				"useTabs": false,
 				"semi": true,
 				"trailingComma": "all",
 				"bracketSpacing": true,
-				"printWidth": 100,
 				"endOfLine": "auto"
 			}
 		],
