--- a/package.json
+++ b/package.json
@@ -30,13 +30,14 @@
     "expo-web-browser": "~13.0.3",
     "react": "18.2.0",
     "react-dom": "18.2.0",
+    "react-hook-form": "^7.52.1",
     "react-native": "0.74.2",
     "react-native-bouncy-checkbox": "^4.0.1",
     "react-native-gesture-handler": "~2.16.1",
     "react-native-reanimated": "~3.10.1",
     "react-native-safe-area-context": "4.10.1",
     "react-native-screens": "3.31.1",
-    "react-native-svg": "15.2.0",
+    "react-native-svg": "^15.4.0",
     "react-native-web": "~0.19.10"
   },
   "devDependencies": {
