--- a/package.json
+++ b/package.json
@@ -36,6 +36,7 @@
     "react-hook-form": "^7.52.1",
     "react-native": "0.74.2",
     "react-native-bouncy-checkbox": "^4.0.1",
+    "react-native-circular-progress": "^1.4.0",
     "react-native-gesture-handler": "~2.16.1",
     "react-native-reanimated": "~3.10.1",
     "react-native-safe-area-context": "4.10.1",
