--- a/package.json
+++ b/package.json
@@ -31,6 +31,7 @@
     "expo-system-ui": "~3.0.6",
     "expo-web-browser": "~13.0.3",
     "husky": "^9.1.4",
+    "jotai": "^2.9.2",
     "react": "18.2.0",
     "react-dom": "18.2.0",
     "react-hook-form": "^7.52.1",
