--- a/package.json
+++ b/package.json
@@ -20,7 +20,7 @@
     "@react-native-google-signin/google-signin": "^12.2.1",
     "@react-navigation/native": "^6.0.2",
     "check-password-strength": "^2.0.10",
-    "expo": "~51.0.14",
+    "expo": "~51.0.31",
     "expo-constants": "~16.0.2",
     "expo-font": "~12.0.7",
     "expo-linear-gradient": "^13.0.2",
@@ -28,25 +28,26 @@
     "expo-router": "~3.5.16",
     "expo-splash-screen": "~0.27.5",
     "expo-status-bar": "~1.12.1",
-    "expo-system-ui": "~3.0.6",
+    "expo-system-ui": "~3.0.7",
     "expo-web-browser": "~13.0.3",
     "husky": "^9.1.4",
     "jotai": "^2.9.2",
     "react": "18.2.0",
     "react-dom": "18.2.0",
     "react-hook-form": "^7.52.1",
-    "react-native": "0.74.2",
+    "react-native": "0.74.5",
     "react-native-bouncy-checkbox": "^4.0.1",
     "react-native-circular-progress": "^1.4.0",
     "react-native-gesture-handler": "~2.16.1",
     "react-native-reanimated": "~3.10.1",
-    "react-native-safe-area-context": "4.10.1",
+    "react-native-safe-area-context": "4.10.5",
     "react-native-screens": "3.31.1",
-    "react-native-svg": "^15.4.0",
+    "react-native-svg": "15.2.0",
     "react-native-web": "~0.19.10"
   },
   "devDependencies": {
     "@babel/core": "^7.20.0",
+    "@react-navigation/bottom-tabs": "^6.6.1",
     "@types/jest": "^29.5.12",
     "@types/react": "~18.2.45",
     "@types/react-test-renderer": "^18.0.7",
@@ -59,7 +60,7 @@
     "eslint-plugin-react": "^7.34.3",
     "eslint-plugin-react-native": "^4.1.0",
     "jest": "^29.2.1",
-    "jest-expo": "~51.0.1",
+    "jest-expo": "~51.0.4",
     "prettier": "^3.3.2",
     "react-test-renderer": "18.2.0",
     "typescript": "~5.3.3"
